refactor(plugin): use getFirst() instead of get(0) for List